--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -194,6 +194,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5dc96947",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Q6:</b>Join alla tables to produce one file that contains all student 1's readings for IBI, EDA , HR and temp\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7dd79654",
    "metadata": {},
    "source": [
@@ -228,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
