--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -97,13 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "4d06f74a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import random\n",
+    "import re\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
@@ -779,8 +781,30 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Q65 :</b>\n",
+    "<b>Q65 :</b>Generate a 3*3Array using \n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "19498618",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 4 5]\n",
+      " [7 3 8]\n",
+      " [5 5 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "array = np.random.randint(1,9,size=(3,3))\n",
+    "print(array)"
    ]
   },
   {
@@ -969,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
