--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -513,49 +513,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           EDA  Time in mins_x Student_id     Exam_x       HR  Time in mins_y  \\\n",
-      "0        0.040               1        S01      final  119.023             1.0   \n",
-      "1        0.040               1        S01      final  130.879             2.0   \n",
-      "2        0.040               1        S01      final  131.586             3.0   \n",
-      "3        0.040               1        S01      final  109.852             4.0   \n",
-      "4        0.040               1        S01      final   81.178             5.0   \n",
-      "...        ...             ...        ...        ...      ...             ...   \n",
-      "5490582  0.021             216       S010  midterm 2  141.667           212.0   \n",
-      "5490583  0.021             216       S010  midterm 2  162.584           213.0   \n",
-      "5490584  0.021             216       S010  midterm 2  171.387           214.0   \n",
-      "5490585  0.021             216       S010  midterm 2  121.597           215.0   \n",
-      "5490586  0.021             216       S010  midterm 2  109.165           216.0   \n",
+      "        Student_id    EDA       HR\n",
+      "0              S01  0.040  119.023\n",
+      "1              S01  0.040  130.879\n",
+      "2              S01  0.040  131.586\n",
+      "3              S01  0.040  109.852\n",
+      "4              S01  0.040   81.178\n",
+      "...            ...    ...      ...\n",
+      "5490582       S010  0.021  141.667\n",
+      "5490583       S010  0.021  162.584\n",
+      "5490584       S010  0.021  171.387\n",
+      "5490585       S010  0.021  121.597\n",
+      "5490586       S010  0.021  109.165\n",
       "\n",
-      "            Exam_y  \n",
-      "0            final  \n",
-      "1            final  \n",
-      "2            final  \n",
-      "3            final  \n",
-      "4            final  \n",
-      "...            ...  \n",
-      "5490582  Midterm 2  \n",
-      "5490583  Midterm 2  \n",
-      "5490584  Midterm 2  \n",
-      "5490585  Midterm 2  \n",
-      "5490586  Midterm 2  \n",
-      "\n",
-      "[5490587 rows x 7 columns]\n"
+      "[5490587 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "df_eda_hr=pd.merge(df_EDA,df_HR, on=[ 'Student_id'])\n",
-    "#df_ibi_temp=pd.merge(df_Temp,df_IBI, on=[ 'Student_id'])\n",
-    "#df_S01=pd.merge(df_eda_hr,df_ibi_temp,on=['Student_id'])\n",
-    "##df_S01=df_S01.where(df_S01['Student_id']=='S01')\n",
-    "print(df_eda_hr)"
+    "df_eda_hr=pd.merge(df_EDA,df_HR, on='Student_id')\n",
+    "df_eda_hr_compact=df_eda_hr[['Student_id','EDA','HR']]\n",
+    "df_eda_hr_compact.where(df_eda_hr_compact['Student_id']=='S01')\n",
+    "# merge_demo_grades = pd.merge(df_Grades, df_Demography, on='Student_id')\n",
+    "# final_exam_gender =merge_demo_grades[['Student_id','Gender','final']]\n",
+    "\n",
+    "\n",
+    "# df_ibi_temp=pd.merge(df_Temp,df_IBI, on='Student_id')\n",
+    "# df_ibi_temp_compact=df_ibi_temp[['Student_id','IBI','TEMP']]\n",
+    "\n",
+    "# df_S01=pd.merge(df_eda_hr_compact,df_ibi_temp_compact,on='Student_id')\n",
+    "\n",
+    "# df_S01=df_S01.where(df_S01['Student_id']=='S01')\n",
+    "print(df_eda_hr_compact)"
    ]
   },
   {
