--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2c196df0",
+   "id": "d3824629",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69898ea1",
+   "id": "8106deba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -569,47 +569,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "edb13fd1",
+   "execution_count": 59,
+   "id": "e254128b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Square Standard Deviation(RMSSD):\n",
+      "Root Mean Square Standard Deviation(RMSSD) at 30 min interval per student for each exam:\n",
       "\n",
-      " nan\n",
-      "                                           Time in mins       IBI  \\\n",
-      "bin(30 min Interval) Student_id Exam                                \n",
-      "[0, 30)              S01        final         13.666667  0.492778   \n",
-      "                                midterm 1     15.666667  0.465611   \n",
-      "                                midterm 2      8.000000  0.521778   \n",
-      "                     S010       final         14.700000  0.596600   \n",
-      "                                midterm 1     13.315789  0.464368   \n",
-      "...                                                 ...       ...   \n",
-      "[360, 390)           S08        midterm 1           NaN       NaN   \n",
-      "                                midterm 2           NaN       NaN   \n",
-      "                     S09        final               NaN       NaN   \n",
-      "                                midterm 1           NaN       NaN   \n",
-      "                                midterm 2           NaN       NaN   \n",
+      " 0.15356750813551906\n",
       "\n",
-      "                                           IBI with RMSSD  HRV  \n",
-      "bin(30 min Interval) Student_id Exam                            \n",
-      "[0, 30)              S01        final                 NaN  NaN  \n",
-      "                                midterm 1             NaN  NaN  \n",
-      "                                midterm 2             NaN  NaN  \n",
-      "                     S010       final                 NaN  NaN  \n",
-      "                                midterm 1             NaN  NaN  \n",
-      "...                                                   ...  ...  \n",
-      "[360, 390)           S08        midterm 1             NaN  NaN  \n",
-      "                                midterm 2             NaN  NaN  \n",
-      "                     S09        final                 NaN  NaN  \n",
-      "                                midterm 1             NaN  NaN  \n",
-      "                                midterm 2             NaN  NaN  \n",
-      "\n",
-      "[390 rows x 4 columns]\n"
+      "HRV per exam for every student:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student_id</th>\n",
+       "      <th>Exam</th>\n",
+       "      <th>HRV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S01</td>\n",
+       "      <td>final</td>\n",
+       "      <td>683.316996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S01</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>768.845870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S01</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>749.286545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S010</td>\n",
+       "      <td>final</td>\n",
+       "      <td>583.815528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>S010</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>776.985608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>S010</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>625.464023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>S02</td>\n",
+       "      <td>final</td>\n",
+       "      <td>695.955176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>S02</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>729.855079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>S02</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>648.451653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>S03</td>\n",
+       "      <td>final</td>\n",
+       "      <td>623.426292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>S03</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>694.128704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>S03</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>635.355540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>S04</td>\n",
+       "      <td>final</td>\n",
+       "      <td>539.634980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>S04</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>774.591574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>S04</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>602.887221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>S05</td>\n",
+       "      <td>final</td>\n",
+       "      <td>644.943676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>S05</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>754.425752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>S05</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>719.889704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>S06</td>\n",
+       "      <td>final</td>\n",
+       "      <td>533.328755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>S06</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>765.598310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>S06</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>596.059917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>S07</td>\n",
+       "      <td>final</td>\n",
+       "      <td>569.609467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>S07</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>773.377409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>S07</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>633.414607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>S08</td>\n",
+       "      <td>final</td>\n",
+       "      <td>664.635092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>S08</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>848.784447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>S08</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>689.893708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>S09</td>\n",
+       "      <td>final</td>\n",
+       "      <td>565.924995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>S09</td>\n",
+       "      <td>midterm 1</td>\n",
+       "      <td>752.715097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>S09</td>\n",
+       "      <td>midterm 2</td>\n",
+       "      <td>605.604338</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student_id       Exam         HRV\n",
+       "0         S01      final  683.316996\n",
+       "1         S01  midterm 1  768.845870\n",
+       "2         S01  midterm 2  749.286545\n",
+       "3        S010      final  583.815528\n",
+       "4        S010  midterm 1  776.985608\n",
+       "5        S010  midterm 2  625.464023\n",
+       "6         S02      final  695.955176\n",
+       "7         S02  midterm 1  729.855079\n",
+       "8         S02  midterm 2  648.451653\n",
+       "9         S03      final  623.426292\n",
+       "10        S03  midterm 1  694.128704\n",
+       "11        S03  midterm 2  635.355540\n",
+       "12        S04      final  539.634980\n",
+       "13        S04  midterm 1  774.591574\n",
+       "14        S04  midterm 2  602.887221\n",
+       "15        S05      final  644.943676\n",
+       "16        S05  midterm 1  754.425752\n",
+       "17        S05  midterm 2  719.889704\n",
+       "18        S06      final  533.328755\n",
+       "19        S06  midterm 1  765.598310\n",
+       "20        S06  midterm 2  596.059917\n",
+       "21        S07      final  569.609467\n",
+       "22        S07  midterm 1  773.377409\n",
+       "23        S07  midterm 2  633.414607\n",
+       "24        S08      final  664.635092\n",
+       "25        S08  midterm 1  848.784447\n",
+       "26        S08  midterm 2  689.893708\n",
+       "27        S09      final  565.924995\n",
+       "28        S09  midterm 1  752.715097\n",
+       "29        S09  midterm 2  605.604338"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -651,7 +873,7 @@
     "\n",
     "# Group by the 'bin' column and calculate the mean for each group\n",
     "\n",
-    "grouped_data = df_IBI_rmssd.groupby(['bin(30 min Interval)','Student_id', 'Exam']).mean()\n",
+    "grouped_data = df_IBI_rmssd.groupby(['Student_id', 'Exam']).mean().reset_index()\n",
     "#grouped_data = df_IBI_rmssd.groupby(['bin(30 min Interval)']).mean().reset_index()\n",
     "\n",
     "# Fill missing values in the DataFrame 'grouped_data'.\n",
@@ -676,12 +898,12 @@
     "grouped_data['HRV'] = calculate_hrv(rmssd_values)\n",
     "\n",
     "# Display the mean interbeat interval,RMSSD at 30 min interval per student for each exam\n",
-    "print(\"Root Mean Square Standard Deviation(RMSSD):\\n\\n\", rmssd)\n",
+    "print(\"Root Mean Square Standard Deviation(RMSSD) at 30 min interval per student for each exam:\\n\\n\", rmssd)\n",
     "\n",
-    "#columns = ['Student_id','Exam','HRV']\n",
-    "#Heart_Rate_Variability=grouped_data[columns]\n",
-    "#print(\"HRV per exam for every student:\\n\")\n",
-    "print(grouped_data)"
+    "columns = ['Student_id','Exam','HRV']\n",
+    "Heart_Rate_Variability=grouped_data[columns]\n",
+    "print(\"\\nHRV per exam for every student:\")\n",
+    "Heart_Rate_Variability"
    ]
   },
   {
