--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -961,7 +961,7 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "<b>Q71 :</b>Creat the visualisation to count the student based on race\n",
-    ")\n",
+    "\n",
     "</div>"
    ]
   },
@@ -1011,22 +1011,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b504543d",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Q74 :</b>\n",
+    "<b>Q74 :</b>Create a Pie chart for  Grades and explode the wedge with Highest Grade in Final and Label with the Student ID\n",
+    "\n",
     "</div>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "40a3ee6d",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Q75 :</b>\n",
+    "<b>Q75 :</b>Find min temparature of the student whose average score (midterm1,midterm2, final) is minimum\n",
+    "\n",
     "</div>"
    ]
   },
