--- a/Team8_PythonPioneers_Main80Questions.ipynb
+++ b/Team8_PythonPioneers_Main80Questions.ipynb
@@ -2442,7 +2442,35 @@
    "id": "954e26eb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming you have a DataFrame named hrv_df with columns including \"Student_id\" and \"HRV\"\n",
+    "# Replace \"your_data.csv\" with the actual file path or data source\n",
+    "\n",
+    "# Load your data\n",
+    "# hrv_df = pd.read_csv(\"your_data.csv\")\n",
+    "\n",
+    "# Assuming \"Ideal_HRV\" is the column representing the ideal HRV for each student\n",
+    "ideal_hrv_col = \"Ideal_HRV\"\n",
+    "\n",
+    "# Calculate the difference between HRV and Ideal_HRV\n",
+    "hrv_df['HRV_Difference'] = hrv_df['HRV'] - hrv_df[ideal_hrv_col]\n",
+    "\n",
+    "# Filter students with HRV 10 or more points lower than ideal\n",
+    "lower_hrv_students = hrv_df[hrv_df['HRV_Difference'] <= -10]\n",
+    "\n",
+    "# Count the number of students with lower HRV\n",
+    "count_lower_hrv_students = lower_hrv_students.shape[0]\n",
+    "\n",
+    "# Visualization\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.bar(['Students with HRV < Ideal HRV'], [count_lower_hrv_students], color='red')\n",
+    "plt.title('Count of Students with HRV 10 or More Points Lower than Ideal HRV')\n",
+    "plt.ylabel('Number of Students')\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3743,6 +3771,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "380f604e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "fe3b8ed2",
    "metadata": {},
@@ -3753,7 +3789,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bf25df72",
    "metadata": {},
@@ -3773,7 +3808,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "70664386",
    "metadata": {},
