--- a/Team8_PythonPioneers_Addnl_Questions.ipynb
+++ b/Team8_PythonPioneers_Addnl_Questions.ipynb
@@ -511,7 +511,32 @@
    "id": "a85e29ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "#prepare data\n",
+    "\n",
+    "data1 = dict(df_ReAd[['Service','DischargeDisposition','PrimaryDiagnosis','PatientID']].query(\"Service == 'ICU' & DischargeDisposition == 'Expired'\").groupby('PrimaryDiagnosis')['Student_id'].nunique().sort_values(ascending=False))\n",
+    "\n",
+    "PatientCount = list(data1.values())\n",
+    "PrimaryDiagnosis = list(data1.keys())\n",
+    "\n",
+    "\n",
+    "data = dict(\n",
+    "    PC = PatientCount,\n",
+    "    PD = PrimaryDiagnosis\n",
+    ")\n",
+    "\n",
+    "#1 Funnel Chart plot\n",
+    "#fig = px.funnel(data, x='PC', y='PD',color_discrete_sequence = ['lightcoral'], opacity = 1)\n",
+    "\n",
+    "#2 Funnel Area plot\n",
+    "fig = px.funnel_area(data, names = 'PD', values = 'PC')\n",
+    "\n",
+    "\n",
+    "fig.update_traces(textfont = {'color': 'white'})\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
